Fixed: the workouts are still getting cut off

--- a/styles/custom.scss
+++ b/styles/custom.scss
@@ -375,7 +375,7 @@ LOGIN & PASSWORDS
 }
 
 .bottom-padding {
-  padding-bottom: 60px;
+  padding-bottom: 100px;
 }
 
 .mid-content-section {
